--- a/assets/font/demo_fontclass.html
+++ b/assets/font/demo_fontclass.html
@@ -79,6 +79,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-duanxin"></i>
+                    <div class="name">短信</div>
+                    <div class="fontclass">.icon-duanxin</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-huwai"></i>
                     <div class="name">户外</div>
                     <div class="fontclass">.icon-huwai</div>
