--- a/assets/font/demo_symbol.html
+++ b/assets/font/demo_symbol.html
@@ -117,6 +117,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-duanxin"></use>
+                    </svg>
+                    <div class="name">短信</div>
+                    <div class="fontclass">#icon-duanxin</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-huwai"></use>
                     </svg>
                     <div class="name">户外</div>
