--- a/assets/register.html
+++ b/assets/register.html
@@ -30,7 +30,7 @@
                 <div class="regMenu_top">
                     <span class="text">欢迎注册</span>
                     <span class="text_r">
-                        已有账号 ? <a href="#">去登陆></a>
+                        已有账号 ? <a href="login.html">去登陆></a>
                     </span>
                 </div>
                 <div class="regMenu_bottom">
