--- a/assets/login.html
+++ b/assets/login.html
@@ -367,24 +367,24 @@
             return;
         }
     }
-    /*------------------手机输入框失焦事件----------------*/
+    /*--------------------手机输入框失焦事件---------------*/
     function blurHandler(e) {
         verifyPhoneReg();
     }
-    /*------------------手机输入框获得焦点事件-------------*/
+    /*------------------手机输入框获得焦点事件--------------*/
     function focusHandler(e) {
         topPhone.style.border="1px solid #79bdd7"
     }
-    /*------------------密码输入框获得焦点事件----------------*/
+    /*------------------密码输入框获得焦点事件--------------*/
     function passFocusHandler(e) {
         topPassword.style.border="1px solid #79bdd7";
     }
-    /*------------------密码输入框失焦事件-------------*/
+    /*------------------密码输入框失焦事件-----------------*/
     function passBlurHandler(e) {
         verifyPassReg();
     }
+    /*------------------创建错误信息div-------------------*/
 
-    /*----------------创建错误信息div-----------------*/
     divStyle={
         fontSize:"12px",
         color:"#fa5b5b",
@@ -407,7 +407,7 @@
     div.appendChild(span);
     reg.appendChild(div);
 
-    /*----------------验证手机号正则表达式--------------*/
+    /*-----------------验证手机号正则表达式---------------*/
     function verifyPhoneReg() {
         topPhone.style. border= "1px solid #c5cddb";
         var phoneReg=/^[1][3,4,5,7,8][0-9]{9}$/;
@@ -429,7 +429,7 @@
             return false;
         }
     }
-    /*----------------验证密码正则表达式--------------*/
+    /*-----------------验证密码正则表达式----------------*/
     function verifyPassReg(e) {
         topPassword.style. border= "1px solid #c5cddb";
         var passReg=/^(\w){6,20}$/;
@@ -451,15 +451,14 @@
             return false;
         }
     }
-
-    /*----------------生成json对象-------------- */
+    /*-----------------生成json对象--------------------*/
     function getJson() {
         var obj={};
         obj.phone=phone.value;
         obj.password=password.value;
         return obj;
     }
-    /*--------------------ajax------------------*/
+    /*---------------------ajax----------------------*/
     function ajax(_type) {
         var objJson=getJson();
         objJson.type=_type;
